Fixed headeer alignment

--- a/admin/assets/css/styles.css
+++ b/admin/assets/css/styles.css
@@ -106,11 +106,18 @@ ul li {
 	height: 55px;
 	line-height: 55px;
 	box-shadow: 0 1px 2px rgba(199,206,209,0.6);
+	position: relative;
 }
 #header a,
 #header a .fa {
 	line-height: 55px;
 	color: #000;
+}
+
+#nav-button {
+	position: absolute;
+	left: 0;
+	top: 0;
 }
 
 #body {
